# chatbot-util

./: .gitignore  404.html  README.md  flake.nix  garnix.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
back/: mkdocs.yaml  pyproject.toml
back/src/chatbot_util/: __main__.py  api.py  chain.py  file_io.py  utils.py
back/src/test/: utilities.py
back/src/test/integration/: test_chain_generate.py  test_interrupt.py
back/src/test/unit/: test_api.py  test_file_io.py  test_main.py  test_utils.py
backend/: index.html
docs/: backend.md  index.md  instructions.md  license.md  reference.md
docs/assets/: custom.css
front/: components.json  cypress.config.js  eslint.config.js  hierarchy.html  index.html  mkdocs.yaml  package-lock.json  package.json  tsconfig.app.json  typedoc.json  vite.config.ts  vitest.setup.ts
front/assets/: highlight.css  navigation.js  search.js
front/functions/: comp_theme-provider.ThemeProvider.html  comp_theme-provider.useTheme.html  comp_ui_button.Button.html  comp_ui_card.Card.html  comp_ui_card.CardAction.html  comp_ui_card.CardContent.html  comp_ui_card.CardDescription.html  comp_ui_card.CardFooter.html  comp_ui_card.CardHeader.html  comp_ui_card.CardTitle.html  comp_ui_dropzone.Dropzone.html  comp_ui_dropzone.DropzoneContent.html  comp_ui_dropzone.DropzoneEmptyState.html  comp_ui_popover.Popover.html  comp_ui_popover.PopoverAnchor.html  comp_ui_popover.PopoverContent.html  comp_ui_popover.PopoverTrigger.html  comp_ui_progress.Progress.html  comp_ui_sonner.Toaster.html  comp_ui_tooltip.Tooltip.html  comp_ui_tooltip.TooltipContent.html  comp_ui_tooltip.TooltipProvider.html  comp_ui_tooltip.TooltipTrigger.html  index.default.html  util_logger.message.html  util_utils.cn.html  view_generate.default.html  view_header.default.html
instructions/: index.html
license/: index.html
nix/: build.nix  deps.nix  format.nix  launch.nix  overlay.nix  package.nix  shell.nix  shellHook.nix  verify.nix
reference/: index.html
script/: build  docs  format  launch  verify
src/: __main__.py  chain.py  employees.py  file_io.py  main.py  parser.py  utils.py
(+69 files in other folders)
