# SPDX-FileCopyrightText: Collegiate Edu-Nation
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-util"
version = "2.0.0"
dependencies = [
  "coloredlogs==15.0.1",
  "fastapi==0.116.1",
  "ollama==0.5.3",
  "uvicorn==0.35.0",
  "python-multipart==0.0.20",
]
requires-python = "==3.13.8"

[project.scripts]
chatbot-util = "chatbot_util.__main__:main"

[project.optional-dependencies]
dev = [
  "coverage==7.10.7",
  "mockito==1.5.4",
  "mkdocs==1.6.1",
  "mkdocs-material==9.6.22",
  "mkdocstrings==0.30.1",
  "mkdocstrings-python==1.16.12",
  "ruff==0.14.3",
]

[tool.coverage.run]
source = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pyright]
typeCheckingMode = "strict"
